--- a/Untukmu/index.html
+++ b/Untukmu/index.html
@@ -20,7 +20,7 @@
 -->
 
 <head>
-<title>Aku ada pantun buat kamu - Script HTML feeldream.id</title>
+<title>Aku ada pantun buat kamu :)- Script HTML feeldream.id</title>
 <meta name="description" content="Script by Feeldream.id">
 </head>
 <body>
